@@ -1639,10 +1639,6 @@ public class Request
             return;
         }
 
-        // Ensure that the specified encoding is valid
-        byte buffer[] = new byte[1];
-        buffer[0] = (byte) 'a';
-
         // Confirm that the encoding name is valid
         B2CConverter.getCharset(enc);
 
@@ -3418,7 +3414,7 @@ public class Request
                 continue;
             }
 
-            Double key = new Double(-quality);  // Reverse the order
+            Double key = Double.valueOf(-quality);  // Reverse the order
             ArrayList<Locale> values = locales.get(key);
             if (values == null) {
                 values = new ArrayList<Locale>();
